# yaml-models

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
example_config/: model.yaml
tests/: conftest.py  test_config.py  test_model.py
yaml_models/: config.py  model.py
