[metadata]
name = yaml_models
version = 0.1.0
description = Generate torch models from yaml config files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomrtk/yaml-models
author = Tom-R. T. Kvalvaag
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    numpy>=1.21.5
    pyyaml>=6.0
    torch>=1.10.0
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    autopep8
    build
    flake8
    isort
    mypy>=0.902
    pre-commit
    pyupgrade
    tox
    twine
    types-all
testing =
    covdefaults
    coverage
    pytest>=4.0.0

[bdist_wheel]
universal = True

[pycodestyle]
max_line_length = 80
in-place = True
recursive = True
experimental = True
aggressive = 3

[flake8]
max-line-length = 80
exclude =
    .venv,
    tests,
    __pycache__,
    build,
    dist

[mypy]
check_untyped_defs = True
disallow_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-tests.*]
disallow_untyped_defs = False

[isort]
line_length = 80
multi_line_output = 3
force_single_line = True

[coverage:run]
plugins = covdefaults

[coverage:report]
skip_covered = False

[tool:pytest]
testpaths = tests
